--- a/configuration.yaml
+++ b/configuration.yaml
@@ -143,6 +143,8 @@ sensor:
 ##Unifi USG Status
   - platform: unifigateway
     host: 192.168.1.202
+    port: 8443
+    verify_ssl: False
     username: !secret unifi_user
     password: !secret unifi_pass
     monitored_conditions:
@@ -179,6 +181,16 @@ konnected:
       switches:
         - zone: out
           name: siren
+
+#Database
+influxdb:
+  host: 192.168.1.208
+  port: 8086
+  database: !secret db_name
+  username: !secret db_user
+  passwork: !secret db_pass
+  max_retries: 3
+  default_measurement: state
 
 ####UNIFI DEVICE TRACKER###
 device_tracker: 
@@ -295,6 +307,7 @@ logger:
   default: warn
   logs:
     custom_components.usps_mail: debug
+    custom_components.unifigateway: debug
     
 #HACS
 hacs:
